--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Fakta Random</h1>
+    <h1>Fakta Random 🎉</h1>
     <div class="tahun-section">
       <p id="year"><strong><%= year %></strong></p>
     </div>
