--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,8 @@
+/* General styles */
 body, html {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,71 +13,117 @@ body, html {
 .container {
   text-align: center;
   padding: 20px;
-  background: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  background: #131842;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
   max-width: 90%;
+  width: 800px; /* Fixed width for consistency */
 }
 
 h1 {
   margin-bottom: 20px;
   font-size: 2rem;
+  color:#f9f9f9;
 }
 
-.tahun-section p {
-  font-size: 1.5rem;
-  font-weight: bold;
+.tahun-section, .fact-section {
+  padding: 15px;
+  border-radius: 8px;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.fact-section p {
-  font-size: 1.2rem;
-  margin-bottom: 20px;
+.tahun-section {
+  background-color: #ECCEAE;
+  color: #131842;
+}
+
+.fact-section {
+  background-color: #FBF6E2;
+  color: #131842;
+}
+
+.tahun-section p, .fact-section p {
+  margin: 0;
+  width: 100%; /* Ensure text doesn't affect the container size */
+  white-space: wrap; /* Prevent text wrapping */
+  overflow: hidden; /* Hide overflow text */
+  text-overflow: ellipsis; /* Add ellipsis for overflow text */
+}
+
+.tahun-section p{
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 button {
   padding: 10px 20px;
   font-size: 1rem;
   border: none;
-  background-color: #007bff;
+  background-color: #E68369;
   color: white;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #bb563c;
 }
 
 /* Mobile styles */
 @media (max-width: 600px) {
   body, html {
-      justify-content: flex-start;
-      align-items: flex-start;
-      padding-top: 20px;
-      height: auto;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-top: 20px;
+    height: auto;
   }
 
   .container {
-      width: 100%;
-      max-width: 100%;
-      margin-top: 20px; /* Add a margin at the top for better spacing */
+    width: 100%;
+    max-width: 100%;
+    box-shadow: none;
+    border-radius: 0;
+    margin-top: 20px;
   }
 
   h1 {
-      font-size: 2rem; /* Maintain the desktop font size */
+    font-size: 2rem; /* Maintain the desktop font size */
+    color:#f9f9f9;
   }
 
-  .tahun-section p {
-      font-size: 1.5rem; /* Maintain the desktop font size */
+  .tahun-section, .fact-section {
+    padding: 15px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-  .fact-section p {
-      font-size: 1.2rem; /* Maintain the desktop font size */
+  .tahun-section {
+    background-color: #ECCEAE;
+    color: #131842;
+  }
+
+  .fact-section {
+    background-color: #FBF6E2;
+    color: #131842;
+  }
+
+  .tahun-section p, .fact-section p {
+    font-size: 1.5rem; /* Maintain the desktop font size */
+    width: 100%; /* Ensure text doesn't affect the container size */
+    white-space: nowrap; /* Prevent text wrapping */
+    overflow: hidden; /* Hide overflow text */
+    text-overflow: ellipsis; /* Add ellipsis for overflow text */
   }
 
   button {
-      width: auto; /* Maintain the button width */
-      font-size: 1rem; /* Maintain the desktop font size */
+    width: auto; /* Maintain the button width */
+    font-size: 1rem; /* Maintain the desktop font size */
   }
 }
