--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-<!-- views/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,15 +7,23 @@
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Fakta Random 🎉</h1>
-    <div class="tahun-section">
-      <p id="year"><strong><%= year %></strong></p>
+  <div class="main-container">
+    <div class="container">
+      <h1>Fakta Random 🎉</h1>
+      <div class="tahun-section">
+        <p id="year"><strong><%= year %></strong></p>
+      </div>
+      <div class="fact-section">
+        <p id="fact"><%= fact %></p>
+      </div>
+      <button id="more-fact-btn">Fakta Lainnya</button>
     </div>
-    <div class="fact-section">
-      <p id="fact"><%= fact %></p>
+    
+    <div class="ad-container">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2418184880630392"
+     crossorigin="anonymous"></script>
+      <p>Ad Placeholder</p>
     </div>
-    <button id="more-fact-btn">Fakta Lainnya</button>
   </div>
 
   <script>
