--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,8 +20,7 @@
     </div>
     
     <div class="ad-container">
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2418184880630392"
-     crossorigin="anonymous"></script>
+      <!-- Replace this with your Google Ads code -->
       <p>Ad Placeholder</p>
     </div>
   </div>
